[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.0"
pydantic = "^1.10.1"
aio-pika = "^8.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
